# Motion-Control

./: .editorconfig  .gitignore  README.md  package.xml  pyproject.toml
Demo/Demo_Cnc/DemoServer/: opcserver.py
Demo/Demo_Cnc/Settings/: axis_params.fcmc  connection_params.fcmc  fcmcua.ini
freecad/Motion-Control/: actuator_widgets.py  axis_widgets.py  fcmcua.ini  fcmcua_actuator_logic.py  fcmcua_actuators_cmd.py  fcmcua_axes_cmd.py  fcmcua_cmd.py  fcmcua_settings.py  init_gui.py  opc_cad_updater.py
freecad/Motion_Control/: Settings.py  __init__.py  axis_widgets.py  connection_params.fcmc  fcmcua_actuator_logic.py  fcmcua_actuators_cmd.py  fcmcua_axes_cmd.py  fcmcua_cmd.py  fcmcua_settings.py  init_gui.py  opc_cad_updater.py  opc_client.py  version.py
freecad/Motion_Control/Actuator/: Logic.py  Parameters.fcmc
freecad/Motion_Control/Axis/: Parameters.fcmc
freecad/Motion_Control/Commands/: Actuators.py  Axes.py  Init.py
freecad/Motion_Control/OPC/: Client.py  Updater.py
